--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
                 ${desiredAmount ? `<p>הפקדה חודשית נדרשת: ${requiredMonthlyDeposit.toFixed(2)} ש"ח</p>` : ''}
             `;
         });
+        
+לפתיחת חסכון וייעוץ משה אליהו נייד 050-2070735
+<a href="https://wa.me/972502070735">פתח שיחת WhatsApp</a>
     </script>
 </body>
 </html>
